--- a/spec/fixtures/choices.yml
+++ b/spec/fixtures/choices.yml
@@ -1,5 +1,7 @@
+# coding: utf-8
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
+# 動作確認データ
 radio-male:
   uuid: RadioMale
   question_id: QuestionRadio
@@ -42,6 +44,7 @@ textarea:
   order: 1
   content: 問題3選択肢1
 
+# 養命酒
 youmei_shu_radio_male:
   uuid: YoumeiShuRadioMale
   question_id: YoumeiShuQuestion1
