--- a/spec/fixtures/enq_faces.yml
+++ b/spec/fixtures/enq_faces.yml
@@ -1,35 +1,41 @@
-﻿# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
+﻿# coding: utf-8
+# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
+# スマートフォン用の動作確認データ
 sc_TO:
   uuid: EnqTOSuccessConfirm
   enq_id: EnqStatus1
   face: TO
-  first_page_id: enqpageTO1page1
+  first_page_id: EnqTOSuccessConfirmPage1
   wait_until: 30
   css: css1
   title: アンケート1TO
   description: アンケート1説明TO
 
+# PC用の動作確認データ
 sc_PC:
   uuid: EnqPCSuccessConfirm
   enq_id: EnqStatus1
   face: PC
-  first_page_id: enqpagePC1page1
+  first_page_id: EnqPCSuccessConfirmPage1
   wait_until: 30
   css: css2
   title: アンケート1PC
   description: アンケート1説明PC
 
+# スマートフォン用のnil動作確認データ
 nullable_TO:
   uuid: EnqTONullable
   enq_id: EnqNullable
   face: TO
   
+# PC用のnil動作確認データ
 nullable_PC:
   uuid: EnqPCNullable
   enq_id: EnqNullable
   face: PC
 
+# 養命酒
 youmei_shu:
   uuid: YoumeiShuEnqFaceID
   enq_id: YoumeiShuEnqID
