--- a/test/fixtures/campaigns.yml
+++ b/test/fixtures/campaigns.yml
@@ -1,35 +1,89 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
+﻿# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
-one:
-  status: 
-  platform: MyString
-  point: 
-  opening_at: 2012-06-10 00:25:34
-  closing_at: 2012-06-10 00:25:34
-  movie: MyString
-  thumbnail: MyString
-  message: MyText
-  conversion_tag: MyText
-  second_picture: MyString
-  banner_title: MyString
-  second_point: 
-  client_url: MyString
-  created_by: MyString
-  updated_by: MyString
+success_confirm:
+  uuid: CampaignSuccessConfirm
+  enq_id: EnqStatus1
+  status: 1
+  platform: mixi
+  point: 10
+  opening_at: 2000-1-1 0:0:0
+  closing_at: 2100-1-1 0:0:0
+  movie: movie1
+  thumbnail: tumbnail1
+  message: キャンペーン1メッセージ
+  conversion_tag: cnvtag1
+  second_picture: 画像1
+  banner_title: banner1
+  second_point: 10
+  client_url: http://client.com
 
-two:
-  status: 
-  platform: MyString
-  point: 
-  opening_at: 2012-06-10 00:25:34
-  closing_at: 2012-06-10 00:25:34
-  movie: MyString
-  thumbnail: MyString
-  message: MyText
-  conversion_tag: MyText
-  second_picture: MyString
-  banner_title: MyString
-  second_point: 
-  client_url: MyString
-  created_by: MyString
-  updated_by: MyString
+status0:
+  uuid: CampaignStatus0
+  enq_id: EnqStatus1
+  status: 0
+  platform: gree
+  point: 20
+  opening_at: 2100-1-1 0:0:0
+  closing_at: 2100-1-1 0:0:0
+  movie: movie2
+  thumbnail: tumbnail2
+  message: キャンペーン2メッセージ
+  conversion_tag: cnvtag2
+  second_picture: 画像2
+  banner_title: banner2
+  second_point: 20
+  client_url: http://client.com
+
+status9:
+  uuid: CampaignStatus9
+  enq_id: EnqStatus1
+  status: 9
+  platform: mixi
+  point: 30
+  opening_at: 2000-1-1 0:0:0
+  closing_at: 2100-1-1 0:0:0
+  movie: movie3
+  thumbnail: tumbnail3
+  message: キャンペーン3メッセージ
+  conversion_tag: cnvtag3
+  second_picture: 画像3
+  banner_title: banner3
+  second_point: 30
+  client_url: http://client.com
+
+closed:
+  uuid: CampaignClosed
+  enq_id: EnqStatus1
+  status: 1
+  platform: gree
+  point: 40
+  opening_at: 2000-1-1 0:0:0
+  closing_at: 2012-1-1 0:0:0
+  movie: movie4
+  thumbnail: tumbnail4
+  message: キャンペーン4メッセージ
+  conversion_tag: cnvtag4
+  second_picture: 画像4
+  banner_title: banner4
+  second_point: 40
+  client_url: http://client.com
+
+nullable:
+  uuid: CampaignNullable
+  enq_id: EnqNullable
+  status: 1
+  platform: gree
+  point: 40 
+
+youmei_shu:
+  uuid: YoumeiShuCampaignID
+  enq_id: YoumeiShuEnqID
+  status: 1
+  platform: mixi
+  point: 13
+  opening_at: 2012-1-1 0:0:0
+  closing_at: 2100-1-1 0:0:0
+  movie: http://cdn.poncan.jp/js/fixed.swfobject.js
+  client_url: http://cdn.poncan.jp
+  
+  
