--- a/test/fixtures/questions.yml
+++ b/test/fixtures/questions.yml
@@ -1,10 +1,12 @@
+# coding: utf-8
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
+# 動作確認データ
 radio:
   uuid: QuestionRadio
   kind: radio
-  title: 問題1
-  content: 問題1本文
+  title: 性別
+  content: 性別を選択してください
   required: false
   answer_content: 問題1正解
   answer_description: 問題1解説
@@ -54,6 +56,35 @@ textarea:
   answer_content: 問題5正解
   answer_description: 問題5解説
 
+# nil要素動作確認用
+nullable_q1:
+  uuid: NullableQuestion1
+  kind: text
+  required: false
+ 
+nullable_q2-1:
+  uuid: NullableQuestion2-1
+  kind: text
+  required: false
+ 
+nullable_q2-2:
+  uuid: NullableQuestion2-2
+  kind: text
+  required: false
+
+# 異常系の確認用データ
+# 設問と選択肢が矛盾している
+incons_question:
+  uuid: QuestionInconsistency
+  kind: select
+  title: 設問と選択肢が矛盾している
+  content: 設問と選択肢が矛盾している
+  required: true
+  answer_content: 設問と選択肢が矛盾している
+  answer_description: 設問と選択肢が矛盾している
+
+  
+# 養命酒
 youmei_shu_question1:
   uuid: YoumeiShuQuestion1
   kind: radio
