--- a/spec/fixtures/campaigns.yml
+++ b/spec/fixtures/campaigns.yml
@@ -3,87 +3,126 @@
 
 # 動作確認用データ
 success_confirm:
-  uuid: CampaignSuccessConfirm
+  mid: CampaignSuccessConfirm
   enq_id: EnqStatus1
   status: 1
   platform: mixi
   point: 10
   opening_at: 2000-1-1 0:0:0
   closing_at: 2100-1-1 0:0:0
-  movie: http://demo.sunbi.co.jp/nci/video/long.mp4
-  thumbnail: tumbnail1
+  movie: /video/long.mp4
+  thumbnail: /images/poster-to.jpg
   message: キャンペーン1メッセージ
   conversion_tag: cnvtag1
-  second_picture: 画像1
+  second_picture: /images/poster-to.jpg
   banner_title: banner1
   second_point: 10
   client_url: http://client.com
 
-# キャンペーンが入稿前のデータ
-status0:
-  uuid: CampaignStatus0
-  enq_id: EnqStatus1
+# nil動作確認用のデータ
+nullable:
+  mid: CampaignNullable
+  enq_id: EnqNullable
+  status: 1
+  platform: gree
+  point: 40 
+  
+# 異常系の確認用データ
+# アンケートの最初のページがNull
+first_page_null:
+  mid: FirstPageNullCampaignID
+  enq_id: FirstPageNullEnqID
+  status: 1
+  platform: mixi
+  point: 10
+  opening_at: 2000-1-1 0:0:0
+  closing_at: 2100-1-1 0:0:0
+  movie: http://demo.sunbi.co.jp/nci/video/long.mp4
+  thumbnail: /images/poster-to.jpg
+  message: キャンペーンメッセージ
+  conversion_tag: cnvtag1
+  second_picture: /images/poster-to.jpg
+  banner_title: banner1
+  second_point: 10
+  client_url: http://client.com
+
+# キャンペーンの状態が入稿前
+camp_status0:
+  mid: CampaignStatus0CampaignID
+  enq_id: CampaignStatus0EnqID
   status: 0
   platform: gree
   point: 20
   opening_at: 2100-1-1 0:0:0
   closing_at: 2100-1-1 0:0:0
   movie: http://demo.sunbi.co.jp/nci/video/long.mp4
-  thumbnail: tumbnail2
+  thumbnail: /images/poster-to.jpg
   message: キャンペーン2メッセージ
   conversion_tag: cnvtag2
-  second_picture: 画像2
+  second_picture: /images/poster-to.jpg
   banner_title: banner2
   second_point: 20
   client_url: http://client.com
 
-# キャンペーンが終了時のデータ
-status9:
-  uuid: CampaignStatus9
-  enq_id: EnqStatus1
+# キャンペーンが終了
+# キャンペーンの状態が終了
+camp_status9:
+  mid: CampaignStatus9CampaignID
+  enq_id: CampaignClosedEnqID
   status: 9
   platform: mixi
   point: 30
   opening_at: 2000-1-1 0:0:0
   closing_at: 2100-1-1 0:0:0
   movie: http://demo.sunbi.co.jp/nci/video/long.mp4
-  thumbnail: tumbnail3
+  thumbnail: /images/poster-to.jpg
   message: キャンペーン3メッセージ
   conversion_tag: cnvtag3
-  second_picture: 画像3
+  second_picture: /images/poster-to.jpg
   banner_title: banner3
   second_point: 30
   client_url: http://client.com
 
-# キャンペーンが終了日時を過ぎていた時のデータ
-closed:
-  uuid: CampaignClosed
-  enq_id: EnqStatus1
+# キャンペーンが終了日時を過ぎている
+camp_closed:
+  mid: CampaignClosedCampaignID
+  enq_id: CampaignClosedEnqID
   status: 1
   platform: gree
   point: 40
   opening_at: 2000-1-1 0:0:0
   closing_at: 2012-1-1 0:0:0
   movie: http://demo.sunbi.co.jp/nci/video/long.mp4
-  thumbnail: tumbnail4
+  thumbnail: /images/poster-to.jpg
   message: キャンペーン4メッセージ
   conversion_tag: cnvtag4
-  second_picture: 画像4
+  second_picture: /images/poster-to.jpg
   banner_title: banner4
   second_point: 40
   client_url: http://client.com
 
-# nil動作確認用のデータ
-nullable:
-  uuid: CampaignNullable
-  enq_id: EnqNullable
+# 設問と選択肢が矛盾している
+incons_question:
+  mid: InconsistencyQuestionCampaignID
+  enq_id: InconsistencyQuestionEnqID
   status: 1
   platform: gree
-  point: 40 
+  point: 40
+  opening_at: 2000-1-1 0:0:0
+  closing_at: 2012-1-1 0:0:0
+  movie: http://demo.sunbi.co.jp/nci/video/long.mp4
+  thumbnail: /images/poster-to.jpg
+  message: キャンペーン4メッセージ
+  conversion_tag: cnvtag4
+  second_picture: /images/poster-to.jpg
+  banner_title: banner4
+  second_point: 40
+  client_url: http://client.com
+
 
 # 養命酒
 youmei_shu:
-  uuid: YoumeiShuCampaignID
+  mid: YoumeiShuCampaignID
   enq_id: YoumeiShuEnqID
   status: 1
   platform: mixi
