--- a/spec/fixtures/questions.yml
+++ b/spec/fixtures/questions.yml
@@ -5,8 +5,8 @@
 radio:
   uuid: QuestionRadio
   kind: radio
-  title: 問題1
-  content: 問題1本文
+  title: 性別
+  content: 性別を選択してください
   required: false
   answer_content: 問題1正解
   answer_description: 問題1解説
@@ -72,6 +72,18 @@ nullable_q2-2:
   kind: text
   required: false
 
+# 異常系の確認用データ
+# 設問と選択肢が矛盾している
+incons_question:
+  uuid: QuestionInconsistency
+  kind: select
+  title: 設問と選択肢が矛盾している
+  content: 設問と選択肢が矛盾している
+  required: true
+  answer_content: 設問と選択肢が矛盾している
+  answer_description: 設問と選択肢が矛盾している
+
+  
 # 養命酒
 youmei_shu_question1:
   uuid: YoumeiShuQuestion1
