--- a/test/fixtures/enq_questions.yml
+++ b/test/fixtures/enq_questions.yml
@@ -1,5 +1,7 @@
+# coding: utf-8
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
+# スマートフォン用の動作確認データ
 scTOquestion1:
   uuid: SuccessConfirmTOQuestion1
   enq_page_id: EnqTOSuccessConfirmPage1
@@ -35,6 +37,7 @@ scTOquestion4-2:
   seq: Q4
   question_id: QuestionCheck
 
+# PC用の動作確認データ
 scPCquestion1:
   uuid: SuccessConfirmPCQuestion1
   enq_page_id: EnqPCSuccessConfirmPage1
@@ -70,6 +73,113 @@ scPCquestion4-2:
   seq: Q4
   question_id: QuestionCheck
 
+# スマートフォン用のnil動作確認データ
+nullableTOuestion1:
+  uuid: NullableTOQuestion1
+  enq_page_id: EnqPageTONullablePage1
+  num: 1
+  seq: Q1
+  question_id: NullableQuestion1
+
+nullableTOuestion2-1:
+  uuid: NullableTOQuestion2-1
+  enq_page_id: EnqPageTONullablePage2-1
+  num: 2
+  seq: Q2
+  question_id: NullableQuestion2-1
+
+nullableTOuestion2-2:
+  uuid: NullableTOQuestion2-2
+  enq_page_id: EnqPageTONullablePage2-2
+  num: 2
+  seq: Q2
+  question_id: NullableQuestion2-2
+
+# PC用のnil動作確認データ
+nullablePCuestion1:
+  uuid: NullablePCQuestion1
+  enq_page_id: EnqPagePCNullablePage1
+  num: 1
+  seq: Q1
+  question_id: NullableQuestion1
+
+nullablePCuestion2-1:
+  uuid: NullablePCQuestion2-1
+  enq_page_id: EnqPagePCNullablePage2-1
+  num: 2
+  seq: Q2
+  question_id: NullableQuestion2-1
+
+nullablePCuestion2-2:
+  uuid: NullablePCQuestion2-2
+  enq_page_id: EnqPagePCNullablePage2-2
+  num: 2
+  seq: Q2
+  question_id: NullableQuestion2-2
+
+# 異常系の確認用データ
+# アンケートの最初のページがNull
+first_page_null_TO:
+  uuid: FirstPageNullEnqQuestionTOID
+  enq_page_id: FirstPageNullEnqPageTOID
+  num: 1
+  seq: Q1
+  question_id: QuestionText
+
+first_page_null_PC:
+  uuid: FirstPageNullEnqQuestionPCID
+  enq_page_id: FirstPageNullEnqPagePCID
+  num: 1
+  seq: Q1
+  question_id: QuestionText
+
+# キャンペーンの状態が入稿前
+camp_status0_TO:
+  uuid: CampaignStatus0EnqQuestionTOID
+  enq_page_id: CampaignStatus0EnqPageTOID
+  num: 1
+  seq: Q1
+  question_id: QuestionText
+
+camp_status0_PC:
+  uuid: CampaignStatus0EnqQuestionPCID
+  enq_page_id: CampaignStatus0EnqPagePCID
+  num: 1
+  seq: Q1
+  question_id: QuestionText
+
+# キャンペーンの状態が終了
+camp_closed_TO:
+  uuid: CampaignClosedEnqQuestionTOID
+  enq_page_id: CampaignClosedEnqPageTOID
+  num: 1
+  seq: Q1
+  question_id: QuestionText
+
+camp_closed_PC:
+  uuid: CampaignClosedEnqQuestionPCID
+  enq_page_id: CampaignClosedEnqPagePCID
+  num: 1
+  seq: Q1
+  question_id: QuestionText
+
+# 設問と選択肢が矛盾している
+incons_question_TO:
+  uuid: InconsistencyQuestionEnqQuestionTOID
+  enq_page_id: InconsistencyQuestionEnqPageTOID
+  num: 1
+  seq: Q1
+  question_id: QuestionInconsistency
+
+incons_question_PC:
+  uuid: InconsistencyQuestionEnqQuestionPCID
+  enq_page_id: InconsistencyQuestionEnqPagePCID
+  num: 1
+  seq: Q1
+  question_id: QuestionInconsistency
+
+
+# 養命酒
 youmei_shu_question1:
   uuid: YoumeiShuEnqQuestion1
   enq_page_id: YoumeiShuEnqPage1
